0x0A-python-inheritance/tests/7-base_geometry.txt
------------------
How to use 7-base_geometry.py
------------------
>>> class BaseGeometry
  File "<stdin>", line 1
>>> class BaseGeometry:                           
...     def area(self):                           
...             raise Exception("area() is not implemented")
...     def integer_validator(self, name, value): 
...             if type(value) is not int:        
...                     raise TypeError("{:s} must be an integer".format(name))
...             if value <= 0:                    
...                     raise ValueError("{:s} must be greater than 0".format(name))
... 
>>> BaseGeometry = __import__('7-base_geometry').BaseGeometry
>>> bg = BaseGeometry()
>>> bg.integer_validator("my_int", 12)
>>> bg.integer_validator("width", 89)
>>> try:
...     bg.integer_validator("name", "John")
... except Exception as e:
...     print("[{}] {}".format(e.__class__.__name__, e))
... try:
  File "<stdin>", line 5
    try:
    ^
SyntaxError: invalid syntax
>>> try:
...     bg.integer_validator("age", 0)
... except Exception as e:
...     print("[{}] {}".format(e.__class__.__name__, e))
... 
[ValueError] age must be greater than 0

>>> try:
...     bg.integer_validator("age", 0)            
... except Exception as e:
...     print("[{}] {}".format(e.__class__.__name__, e))
... 
[ValueError] age must be greater than 0
>>> try:
...     bg.integer_validator("distance", -4)
... except Exception as e:
...     print("[{}] {}".format(e.__class__.__name__, e))
... 
[ValueError] distance must be greater than 0
>>> 
